@@ -1,3 +1,16 @@
 exports.Lexer = function(lang) {
   return require('./gherkin/lexer/' + lang).Lexer;
 };
+
+exports.connect = function(path) {
+  var gherkinFiles = require('connect').static(__dirname);
+
+  return function(req, res, next) {
+    if(req.url.indexOf(path) == 0) {
+      req.url = req.url.slice(path.length);
+      gherkinFiles(req, res, next);
+    } else {
+      next();
+    }
+  };
+};
